<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activity.PinSuccessActivity">

    <TextView
        android:id="@+id/tv_pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/your_password_is"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pass_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/louis_george_bold"
        android:text="@string/random_pass"
        android:textColor="@color/red"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/click_on_your_code_to_copy_it"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_regenerate_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/i_need_another_pin" />


</RelativeLayout>