<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragment.PasswordFragment">

    <TextView
        android:id="@+id/tv_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/password_generator"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/password_length"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_edit"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/red" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/til_password"
        android:checked="true"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/include_upper_case_characters"
        android:textColor="@color/white"
        app:switchPadding="50dp"
        app:thumbTint="@color/red" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/switch_upper"
        android:checked="true"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/include_lower_case_characters"
        android:textColor="@color/white"
        app:switchPadding="50dp"
        app:thumbTint="@color/red" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/switch_lower"
        android:checked="true"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/include_special_characters"
        android:textColor="@color/white"
        app:switchPadding="80dp"
        app:thumbTint="@color/red" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/switch_char"
        android:checked="true"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/include_numbers"
        android:textColor="@color/white"
        app:switchPadding="135dp"
        app:thumbTint="@color/red" />



    <Button
        android:id="@+id/btn_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_lower"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/louis_george_cafe"
        android:text="@string/get_me_my_new_password" />


</RelativeLayout>